// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`As Link 1`] = `
<a
  href="https://www.udir.no/"
  style="display: flex; gap: var(--ds-size-2); align-items: center;"
>
  <span
    aria-hidden="true"
    data-variant="circle"
    role="img"
  >
  </span>
  <span>
    Ola Nordmann
  </span>
</a>
`;

exports[`Color Variants 1`] = `
<span
  aria-label="color neutral"
  data-color="neutral"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="color accent"
  data-color="accent"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="color support1"
  data-color="support1"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="color support2"
  data-color="support2"
  data-variant="circle"
  role="img"
>
</span>
`;

exports[`Content 1`] = `
<span
  aria-label="Ola Nordmann"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="Ola Nordmann"
  data-initials="ON"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="Ola Nordmann"
  data-variant="circle"
  role="img"
>
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
      fill="currentColor"
      fill-rule="evenodd"
    >
    </path>
  </svg>
</span>
<span
  aria-label="Ola Nordmann"
  data-variant="circle"
  role="img"
>
  <img
    alt
    aria-hidden="true"
    src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?q=80&amp;w=1480&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
  >
</span>
`;

exports[`In Dropdown 1`] = `
<button
  data-variant="tertiary"
  popovertarget="_r_1_"
  type="button"
>
  <span
    aria-hidden="true"
    data-initials="ON"
    data-size="sm"
    data-variant="circle"
    role="img"
  >
  </span>
  Ola Nordmann
  <svg
    aria-hidden="true"
    fill="none"
    focusable="false"
    height="1em"
    role="img"
    viewbox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M11.47 7.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 1 1-1.06 1.06L12 9.56l-4.97 4.97a.75.75 0 0 1-1.06-1.06z"
      fill="currentColor"
      fill-rule="evenodd"
    >
    </path>
  </svg>
</button>
<div
  data-floating="bottom-end"
  data-placement="bottom-end"
  data-size="md"
  data-variant="default"
  id="<removed>"
  popover="manual"
  style="--_ds-floating-arrow-x: 151px; --_ds-floating-arrow-y: -38px; translate: <removed>;"
>
  <h2>
    Velg profil
  </h2>
  <ul>
    <li>
      <button
        data-variant="tertiary"
        type="button"
      >
        <span
          data-overlap="circle"
          data-placement="top-right"
        >
          <span
            data-color="danger"
            data-size="sm"
            data-variant="base"
          >
          </span>
          <span
            aria-hidden="true"
            data-initials="ON"
            data-size="xs"
            data-variant="circle"
            role="img"
          >
          </span>
        </span>
        Ola Nordmann
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
      >
        <span
          aria-hidden="true"
          data-color="support1"
          data-size="xs"
          data-variant="circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewbox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
              fill="currentColor"
              fill-rule="evenodd"
            >
            </path>
          </svg>
        </span>
        Sogndal kommune
      </button>
    </li>
  </ul>
</div>
`;

exports[`Preview 1`] = `
<span
  aria-label="Ola Nordmann"
  data-variant="circle"
  role="img"
>
</span>
`;

exports[`Sizes 1`] = `
<span
  aria-label="extra small"
  data-initials="xs"
  data-size="xs"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="extra small"
  data-size="xs"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="small"
  data-initials="sm"
  data-size="sm"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="small"
  data-size="sm"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="medium"
  data-initials="md"
  data-size="md"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="medium"
  data-size="md"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="large"
  data-initials="lg"
  data-size="lg"
  data-variant="circle"
  role="img"
>
</span>
<span
  aria-label="large"
  data-size="lg"
  data-variant="circle"
  role="img"
>
</span>
`;
